Fixed spacing between contacts

--- a/style.css
+++ b/style.css
@@ -433,10 +433,16 @@ p {
     font-size: 10px;
 }
 
+.contacts {
+    display: flex;
+    flex-direction: row;
+    justify-content: left;
+    gap: 10px;
+}
+
 #discord {
     height: 30px;
     text-decoration: none;
-    padding-right: 2%;
 }
 
 #instagram {
